--- a/src/app/modules/challenge/challenge.component.html
+++ b/src/app/modules/challenge/challenge.component.html
@@ -14,7 +14,7 @@
                 <button class="btn btn-lg btn-light v-center" (click)="showModal()">Contact Challenge Leader</button>
             </div>
             <div class="col-lg-3 col-md-3">
-                <a class="btn btn-lg btn-light v-center" href="#">Donate</a>
+                <a class="btn btn-lg btn-light v-center full" href="#">Donate</a>
             </div>
         </div>
     </div>
@@ -45,14 +45,12 @@
                 </ul>
             </div>
         </div>
-        <h5 class="mb-3 mt-5 section-title text-center text-dark font-weight-bold top">This are the different ways you
-            can
-            help</h5>
+        <h5 class="mb-3 mt-5 section-title text-center text-dark font-weight-bold top">How to Participatep</h5>
         <div class="row">
             <div class="col-lg-3 col-md-6 mb-3 mb-lg-0">
                 <div
                     class="bg-light d-flex features-icons-item flex-column h-100 mb-5 mb-lg-0 mb-lg-3 mx-auto px-4 py-3 rounded">
-
+                    <h5>Healthcare Providers</h5>
                     <p class="lead mb-0 flex-fill">
                         An anonymous place to share frustrations about what isn’t working on the front lines.
                         If you would like to speak directly to the people building solutions, please complete the
@@ -64,10 +62,9 @@
             <div class="col-lg-3 col-md-6 mb-3 mb-lg-0">
                 <div
                     class="bg-light d-flex features-icons-item flex-column h-100 mb-5 mb-lg-0 mb-lg-3 mx-auto px-4 py-3 rounded">
+                    <h5>ParticipateHackers and Entrepreneurs</h5>
                     <p class="lead mb-0 flex-fill">
-                        ParticipateWe welcome developers, designers, business development professionals, project
-                        managers and more to participate.
-                        If possible, we will connect single founders with a team.
+                        We welcome developers, designers, business development professionals, project managers and more to participate in hackathons to be announced.
                     </p>
                     <button class="btn btn-primary" (click)="showModal()">Participate</button>
                 </div>
@@ -76,6 +73,7 @@
             <div class="col-lg-3 col-md-6 mb-3 mb-lg-0">
                 <div
                     class="bg-light d-flex features-icons-item flex-column h-100 mb-0 mb-lg-3 mx-auto px-4 py-3 rounded">
+                    <h5>Advisors</h5>
                     <p class="lead mb-0 flex-fill">
                         Seeking experts to provide context and guidance for Innovation Challenges. <br>
                         Areas of interest include healthcare administration; hardware and software; medical equipment;
@@ -88,9 +86,9 @@
                 <div
                     class="bg-dark d-flex features-icons-item flex-column h-100 mb-0 mb-lg-3 mx-auto px-4 py-3 rounded space">
                     <h4>Media press Inquiries:</h4>
-                    <a class="btn btn-light" href="#">Hackers/Founders</a>
-                    <a class="btn btn-light" href="#">HACK/Fund</a>
-                    <a class="btn btn-light" href="#">media@hf.cx</a>
+                    <a class="btn btn-light" href="https://hf.cx/" target="_blank">Hackers/Founders</a>
+                    <a class="btn btn-light" href="https://hack.hf.cx/" target="_blank">HACK/Fund</a>
+                    <a class="btn btn-light" href="mailto:media@hf.cx" target="_blank">media@hf.cx</a>
                 </div>
             </div>
         </div>
