--- a/src/app/modules/layout/components/footer/footer.component.html
+++ b/src/app/modules/layout/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer bg-dark text-white">
     <div class="container-fluid">
-        <div class="row mt-5">
+        <div class="row space">
             <div class="col-lg-4 h-100 text-center text-lg-left my-auto">
                 <img class="logo" src="../../../../../assets/img/logo-white.png" alt="fcovid">
             </div>
@@ -11,22 +11,22 @@
             <div class="col-lg-4 h-100 text-center text-lg-right my-auto">
                 <ul class="list-inline mb-0">
                     <li class="list-inline-item mr-3">
-                        <a target="_blank" href="https://www.facebook.com/thehackfund/">
+                        <a target="_blank" href="https://fb.me/FCOVIDHF/">
                             <i class="fab fa-facebook-f fa-2x fa-fw"></i>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="https://www.instagram.com/hackersfounders/">
+                        <a target="_blank" href="https://www.instagram.com/fcovid_hf/">
                             <i class="fab fa-instagram fa-2x fa-fw"></i>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="https://www.linkedin.com/company/18322572/admin/">
+                        <a target="_blank" href="https://www.linkedin.com/showcase/f-covid">
                             <i class="fab fa-linkedin-in fa-2x fa-fw"></i>
                         </a>
                     </li>
                     <li class="list-inline-item mr-3">
-                        <a target="_blank" href="https://twitter.com/thehackfund">
+                        <a target="_blank" href="https://twitter.com/FCOVID_HF">
                             <i class="fab fa-twitter fa-2x fa-fw"></i>
                         </a>
                     </li>
