--- a/src/app/modules/layout/components/header/header.component.html
+++ b/src/app/modules/layout/components/header/header.component.html
@@ -6,7 +6,7 @@
         </a>
         <div class="m-0 p-0">
             <a pageScroll class="d-none d-md-inline-block text-light mr-5" [routerLink]="['/home']"
-                fragment="general-description"> F/COVID </a>
+                fragment="general-description"> About Us </a>
             <div class="dropdown">
                 <button class="dropbtn">Challenges</button>
                 <div class="dropdown-content">
