--- a/src/theme/_icons.scss
+++ b/src/theme/_icons.scss
@@ -3,6 +3,15 @@
   padding-bottom: 7rem;
   .features-icons-item {
     max-width: 20rem;
+    h5 {
+      font-family: 'Montserrat',Helvetica,Arial,serif;
+      font-weight: 600;
+      font-style: normal;
+      font-size: 1em;
+      color: rgba(47,54,75,1.0);
+      text-align: center;
+      line-height: 23.0px;
+    }
     .features-icons-icon {
       height: 7rem;
       i {
