ajuste de acuerdo a diseño

--- a/src/app/modules/layout/components/header/header.component.html
+++ b/src/app/modules/layout/components/header/header.component.html
@@ -7,7 +7,7 @@
         <div class="m-0 p-0">
             <a pageScroll class="d-none d-md-inline-block text-light mr-5" [routerLink]="['/home']"
                 fragment="general-description"> About Us </a>
-            <div class="dropdown">
+            <div class="dropdown mr-5">
                 <button class="dropbtn">Challenges</button>
                 <div class="dropdown-content">
                     <a [routerLink]="['/challenge/feed-the-heroes']"> Feed the heroes </a>
@@ -15,7 +15,7 @@
                     <a href="https://www.coventchallenge.com/" target="_blank"> CoVent-19 </a>
                 </div>
               </div>
-            <a class="btn btn-light d-none d-md-inline-block mx-3" (click)="showModal()">I want to participate</a>
+            <!-- <a class="btn btn-light d-none d-md-inline-block mx-3" (click)="showModal()">I want to participate</a> -->
             <a class="btn btn-light" href="#">Donate</a>
         </div>
     </div>
