--- a/src/app/modules/layout/components/sponsor-section/sponsor-section.component.html
+++ b/src/app/modules/layout/components/sponsor-section/sponsor-section.component.html
@@ -1,4 +1,4 @@
-<section class="bg-dark pt-1">
+<section class="bg-dark pt-1 pb-5">
 
     <div class="container text-white">
         <h5 class="mb-3 mt-5 section-title text-center font-weight-bold">Our Sponsors and Partners</h5>
