--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -15,7 +15,7 @@ $blue: #2f364b !default; // <- azul hf
 $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
 $pink: #f16968 !default;
-$red: #dc3545 !default;
+$red: #e67270 !default;
 $orange: #fd7e14 !default;
 $yellow: #ffc107 !default;
 $green: #28a745 !default;
