--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<layout-header></layout-header>
+<div class="container">
+    <layout-header></layout-header>
 
-<router-outlet></router-outlet>
-
-<layout-footer></layout-footer>
+    <router-outlet></router-outlet>
+    
+    <layout-footer></layout-footer>
+</div>
