--- a/src/app/modules/landing/landing.component.html
+++ b/src/app/modules/landing/landing.component.html
@@ -2,10 +2,10 @@
 <header class="text-dark text-lg-right text-center">
     <div class="container">
         <div class="row masthead">
-            <div class="col-lg-6 offset-lg-6 col-sm-8 offset-sm-2">
+            <div class="col-lg-6 offset-lg-6 col-sm-8 offset-sm-2 pr-0">
                 <span class="mini-logo">by <img src="../../../../../assets/img/hf-logo.png" alt="hf-logo"> &
                     <img src="../../../../../assets/img/hack-fund-logo.png" alt="hack-fund-logo"></span>
-                <p class="align-right">Kackers and Founders fixing COVID-19</p>
+                <p class="align-right">Hackers and Founders fixing COVID-19</p>
             </div>
         </div>
     </div>
@@ -21,13 +21,12 @@
         </p>
         <div class="button-section d-flex flex-column flex-lg-row justify-content-around mt-5">
             <a pageScroll class="btn btn-lg btn-light v-center mb-2" [routerLink]="['/home']"
-                fragment="challenge-feed-a-hero">Feed the
-                Heroes</a>
+                fragment="feed-the-heroes">Feed the Heroes</a>
             <a pageScroll class="btn btn-lg btn-light mb-2" [routerLink]="['/home']"
-                fragment="challenge-healthcare-system-data">Healthcare
+                fragment="healthcare-system-data">Healthcare
                 System Data</a>
             <a pageScroll class="btn btn-lg btn-light v-center mb-2" [routerLink]="['/home']"
-                fragment="challenge-covent-19">CoVent-19</a>
+                fragment="covent-19">CoVent-19 Challenge</a>
         </div>
     </div>
 </section>
@@ -36,11 +35,9 @@
 <section class="features-icons text-center">
     <div class="container">
         <h4 class="mb-3 mt-5 px-5 text-danger font-weight-bold font-italic">
-            If there’s anything that a Hacker and a Founder knows how to do is figure out how to do the impossible with
-            scarce resources.
+            If there is anything innovation-driven hackers and founders know how to do, it is achieving the impossible with scarce resources.
         </h4>
-        <h5 class="mb-3 mt-5 section-title text-center text-dark font-weight-bold">This are the different ways you can
-            help</h5>
+        <h5 class="mb-4 pb-2 mt-5 section-title text-center text-dark font-weight-bold">How to Participate</h5>
         <div class="row">
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
                 <div
@@ -49,12 +46,13 @@
                         <i class="icon-screen-desktop m-auto text-primary"></i>
                     </div> -->
                     <!-- <h3>Know More</h3> -->
+                    <h6>Healthcare Providers</h6>
                     <p class="lead mb-0 flex-fill">
-                        An anonymous place to share frustrations about what isn’t working on the front lines.
-                        If you would like to speak directly to the people building solutions, please complete the
-                        optional contact information.
+                        An anonymous place to share frustrations about what is not working on the front lines. If you
+                        would like to speak directly to people building solutions, please complete the optional contact
+                        information.
                     </p>
-                    <button class="btn btn-primary" (click)="showModal()">Contact FCOVID team</button>
+                    <button class="btn btn-primary" (click)="showModal()">Fill Anonymous form</button>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
@@ -64,10 +62,10 @@
                         <i class="icon-layers m-auto text-primary"></i>
                     </div> -->
                     <!-- <h3>Participate</h3> -->
+                    <h6>Hackers and Entrepreneurs</h6>
                     <p class="lead mb-0 flex-fill">
-                        ParticipateWe welcome developers, designers, business development professionals, project
-                        managers and more to participate.
-                        If possible, we will connect single founders with a team.
+                        We welcome developers, designers, business development professionals, project managers and more
+                        to participate in hackathons to be announced.
                     </p>
                     <button class="btn btn-primary" (click)="showModal()">Participate</button>
                 </div>
@@ -94,8 +92,12 @@
                         <i class="icon-check m-auto text-primary"></i>
                     </div> -->
                     <!-- <h3>Donate</h3> -->
+                    <h6>teamAdvisors</h6>
                     <p class="lead mb-0 flex-fill">
-                        Seeking experts to provide context and guidance for Innovation Challenges. <br>
+                        Seeking experts to provide context and guidance for Innovation Challenges.
+                    </p>
+                    <br>
+                    <p>
                         Areas of interest include healthcare administration; hardware and software; medical equipment;
                         legal; governmental, economic and environmental policy; and more.
                     </p>
@@ -106,9 +108,9 @@
     </div>
 </section>
 
-<section class="bg-dark py-5 text-light">
-    <div class="container p-0">
-        <h5 class="mb-3 section-title text-center font-weight-bold">How does FCOVID works</h5>
+<section class="py-5">
+    <div class="container px-5">
+        <h5 class="mb-4 pb-2  section-title text-center font-weight-bold">About FCOVID</h5>
         <div class="row no-gutters">
             <div class="col-lg-6 text-right">
                 <img class="w-100" src="../../../assets/img/how-does-work.png" alt="how-does-work">
@@ -116,16 +118,16 @@
             <div class="col-lg-6 my-auto pt-5 pt-lg-0 px-3 showcase-text">
                 <!-- <h2>Updated For Bootstrap 4</h2> -->
                 <p class="lead mb-0">
-                    F/COVID is the non-profit arm of Hackers/Founders and HACK Fund, established to deliver
-                    technological solutions for the COVID-19 crisis. Our Innovation Challenges are constructed to
-                    address healthcare professionals’ urgent needs as they serve on the front lines.
+                    F/COVID is the nonprofit arm of Hackers/Founders and HACK Fund, established to deliver technological
+                    solutions for the COVID-19 crisis. Our Innovation Challenges are constructed to address healthcare
+                    professionals’ urgent needs as they serve on the front lines.
                 </p> <br>
                 <p class="lead mb-0">
-                    Our Process <br>
-                    -Network with government, healthcare and manufacturing leaders <br>
-                    -Source and select nonprofit startup teams from around the globe <br>
-                    -F/COVID provides on-demand funding for validated hardware and software solutions <br>
-                    -The F/COVID team is available for support
+                    <b>Our Work</b>
+                    <br>
+                    Collaborate with government, healthcare and manufacturing leaders <br>
+                    Source and select nonprofit startup teams from around the globe <br>
+                    Provide on-demand funding and support for validated hardware and software solutions
                 </p>
             </div>
         </div>
@@ -134,27 +136,24 @@
 </section>
 
 <section class="showcase">
-    <div class="container p-0">
-        <h4 class="mb-3 mt-5 px-5 text-center text-danger font-weight-bold font-italic">
+    <div class="container px-5">
+        <!-- <h4 class="mb-3 mt-5 px-5 text-center text-danger font-weight-bold font-italic">
             We build. We measure. We improve. We improvise. We overcome.
-        </h4>
+        </h4> -->
 
-        <h5 class="mb-3 mt-5 section-title text-center text-dark font-weight-bold">Active Challenges</h5>
+        <h5 class="mb-4 pb-2 mt-5 section-title text-center text-dark font-weight-bold">Active Challenges</h5>
 
-        <div *ngFor="let challenge of (challenges | async); let index = index;" class="row no-gutters"
+        <div *ngFor="let challenge of (challenges | async); let index = index;" class="row no-gutters bg-light mb-5"
             [attr.id]="challenge.id">
-            <div class="col-lg-6 text-white showcase-img d-flex"
-                [ngClass]="{'order-lg-2': index % 2 == 0, 'order-lg-1': index % 2 == 1}"
-                [ngStyle]="{'background-image': 'url('+challenge.home_background+')',
+            <div class="col-lg-6 text-white showcase-img d-flex order-lg-1" [ngStyle]="{'background-image': 'url('+challenge.home_background+')',
                 'background-repeat': 'no-repeat',
                 'background-position': 'center',
                 'background-size': 'cover'}">
                 <img [ngClass]="challenge.home_background != null ? 'm-auto' : 'w-100'" [src]="challenge.home_image"
                     alt="challenge.id">
             </div>
-            <div class="col-lg-6 px-3 showcase-text d-flex flex-column"
-                [ngClass]="{'order-lg-2': index % 2 == 1, 'order-lg-1': index % 2 == 0}">
-                <h2>{{ challenge.title }}</h2>
+            <div class="col-lg-6 px-3 showcase-text d-flex flex-column order-lg-2">
+                <h2 class="mb-5">{{ challenge.title }}</h2>
                 <p class="lead mb-0 flex-fill" [innerHTML]="challenge.description">
                 </p>
                 <a *ngIf="challenge.type == 'internal'" class="btn btn-lg btn-primary mt-3 text-light"
