--- a/src/app/modules/layout/components/footer/footer.component.html
+++ b/src/app/modules/layout/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer bg-dark text-white">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row space">
             <div class="col-lg-4 h-100 text-center text-lg-left my-auto">
                 <img class="logo" src="../../../../../assets/img/logo-white.png" alt="fcovid">
