--- a/src/app/modules/layout/components/footer/footer.component.html
+++ b/src/app/modules/layout/components/footer/footer.component.html
@@ -1,14 +1,14 @@
-<footer class="footer bg-dark text-white">
+<footer class="footer bg-dark text-white pt-5 pb-1">
     <div class="container">
-        <div class="row space">
-            <div class="col-lg-4 h-100 text-center text-lg-left my-auto">
+        <div class="row">
+            <div class="col-lg-3 h-100 text-center text-lg-left my-auto">
                 <img class="logo" src="../../../../../assets/img/logo-white.png" alt="fcovid">
             </div>
-            <div class="col-lg-4 h-100 text-center my-auto">
+            <div class="col-lg-6 h-100 text-center my-auto">
                 <p class="mb-lg-n5 small text-muted">Powered by Hackers/Founders . &copy; 2020 Property of
                     Hackers/Founders.</p>
             </div>
-            <div class="col-lg-4 h-100 text-center text-lg-right my-auto">
+            <div class="col-lg-3 h-100 text-center text-lg-right my-auto">
                 <ul class="list-inline mb-0">
                     <li class="list-inline-item mr-3">
                         <a target="_blank" href="https://fb.me/FCOVIDHF/">
