--- a/src/app/modules/layout/components/sponsor-section/sponsor-section.component.html
+++ b/src/app/modules/layout/components/sponsor-section/sponsor-section.component.html
@@ -1,17 +1,18 @@
-<section class="bg-dark pt-1 pb-5">
+<section class="bg-dark pt-1 pb-5 px-5">
 
     <div class="container text-white">
-        <h5 class="mb-3 mt-5 section-title text-center font-weight-bold">Our Sponsors and Partners</h5>
+        <h5 class="my-4 py-1 section-title text-center font-weight-bold">Our Sponsors and Partners</h5>
         <div class="row">
             <div class="col-lg-3 col-md-6">
                 <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3 h-100 d-flex flex-column">
-                    <img class="m-auto mw-100 logo" src="../../../../../assets/img/hack-fund-logo-lg.png"
-                        alt="hack-fund-logo">
+                    <img class="m-auto logo" src="../../../../../assets/img/hack-fund-logo-lg.png" alt="hack-fund-logo"
+                        style="height: 35px;">
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3 h-100 d-flex flex-column">
-                    <img class="m-auto mw-100 logo" src="../../../../../assets/img/hf-logo-lg.png" alt="hf-logo">
+                    <img class="m-auto mw-100 logo" src="../../../../../assets/img/hf-logo-lg.png" alt="hf-logo"
+                        style="height: 35px;">
                 </div>
             </div>
         </div>
