--- a/src/app/modules/layout/components/header/header.component.html
+++ b/src/app/modules/layout/components/header/header.component.html
@@ -16,7 +16,7 @@
                 </div>
               </div>
             <!-- <a class="btn btn-light d-none d-md-inline-block mx-3" (click)="showModal()">I want to participate</a> -->
-            <a class="btn btn-light" href="#">Donate</a>
+            <a class="btn btn-light space" href="#">Donate</a>
         </div>
     </div>
 </nav>
