--- a/src/app/modules/layout/components/header/header.component.scss
+++ b/src/app/modules/layout/components/header/header.component.scss
@@ -33,3 +33,8 @@
 .dropdown:hover .dropdown-content {display: block;}
 
 .dropdown:hover .dropbtn {background-color:rgba(230, 114, 112, 1.0);}
+
+.space {
+    padding-left: 3em;
+    padding-right: 3em;
+}
