--- a/src/app/modules/layout/components/footer/footer.component.html
+++ b/src/app/modules/layout/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer bg-dark text-white pt-5 pb-1">
+<footer class="footer bg-dark text-white">
     <div class="container">
         <div class="row">
             <div class="col-lg-3 h-100 text-center text-lg-left my-auto">
