--- a/src/app/modules/landing/landing.component.html
+++ b/src/app/modules/landing/landing.component.html
@@ -53,7 +53,7 @@
                         would like to speak directly to people building solutions, please complete the optional contact
                         information.
                     </p>
-                    <button class="btn btn-primary" (click)="showModal()">Fill Anonymous form</button>
+                    <button class="btn btn-primary" (click)="showModalAnonymous()">Fill Anonymous form</button>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
@@ -68,7 +68,7 @@
                         We welcome developers, designers, business development professionals, project managers and more
                         to participate in hackathons to be announced.
                     </p>
-                    <button class="btn btn-primary" (click)="showModal()">Participate</button>
+                    <button class="btn btn-primary" (click)="showModalParticipate()">Participate</button>
                 </div>
             </div>
             <!-- <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
@@ -102,7 +102,7 @@
                         Areas of interest include healthcare administration; hardware and software; medical equipment;
                         legal; governmental, economic and environmental policy; and more.
                     </p>
-                    <button class="btn btn-primary" (click)="showModal()">Contact FCOVID team</button>
+                    <button class="btn btn-primary" (click)="showModalAdvisors()">Contact FCOVID team</button>
                 </div>
             </div>
         </div>
