--- a/src/app/modules/layout/components/contact-modal/contact-modal.component.html
+++ b/src/app/modules/layout/components/contact-modal/contact-modal.component.html
@@ -1,64 +1,62 @@
-  <div class="modal-body">
-    <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" novalidate>
-        <div class="form-group">
-          <label for="exampleFormControlInput0">Full Name</label>
-          <input formControlName="fullname" type="text" class="form-control" id="exampleFormControlInput0">
-          <div *ngIf="contactForm.get('fullname').errors && contactForm.get('fullname').dirty && contactForm.get('fullname').touched" class="error">
-            <p *ngIf="contactForm.get('fullname').hasError('required')">Field is requiered</p>
-          </div>
+<div class="modal-header">
+  <button type="button" class="close pull-right" aria-label="Close" (click)="hideModal()">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="modal-body">
+  <h5 class="modal-title pull-left" id="my-modal-title">Healthcare Providers Form</h5>
+  <p>
+    Your information will not be sold or shared with outside organizations.
+    If you prefer to be contacted, please complete the information below.
+  </p>
+  <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" novalidate>
+      <div class="form-group">
+        <label for="exampleFormControlInput0">Profession (Optional)</label>
+        <input formControlName="profession" type="text" class="form-control" id="exampleFormControlInput0">
+        <div *ngIf="contactForm.get('profession').errors && contactForm.get('profession').dirty && contactForm.get('profession').touched" class="error">
+          <p *ngIf="contactForm.get('profession').hasError('required')">Field is requiered</p>
         </div>
-        <div class="form-group">
-            <label for="exampleFormControlInput1">e-mail</label>
-            <input formControlName="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-            <div *ngIf="contactForm.get('email').errors && contactForm.get('email').dirty && contactForm.get('email').touched" class="error">
-              <p *ngIf="contactForm.get('email').hasError('required')">Field is requiered</p>
-              <p *ngIf="contactForm.get('email').hasError('email')">Invalid format email</p>
-            </div>
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Comments:</label>
+        <textarea formControlName="comments" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <div *ngIf="contactForm.get('comments').errors && contactForm.get('comments').dirty || contactForm.get('comments').touched" class="error">
+          <p *ngIf="contactForm.get('comments').hasError('required')">Field is requiered</p>
         </div>
-        <div class="form-group">
-          <label for="exampleFormControlSelect1">I am a:</label>
-          <select formControlName="iAmA" class="form-control" id="exampleFormControlSelect1">
-            <option value="">Select</option>
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-          </select>
-          <div *ngIf="contactForm.get('iAmA').errors && contactForm.get('iAmA').dirty && contactForm.get('iAmA').touched" class="error">
-            <p *ngIf="contactForm.get('iAmA').hasError('required')">Field is requiered</p>
-          </div>
+      </div>
+      <h6><strong>Contact Information</strong>(Optional)</h6>
+      <div class="form-group">
+        <label for="exampleFormControlInput0">Full Name</label>
+        <input formControlName="fullname" type="text" class="form-control" id="exampleFormControlInput0">
+        <div *ngIf="contactForm.get('fullname').errors && contactForm.get('fullname').dirty && contactForm.get('fullname').touched" class="error">
+          <p *ngIf="contactForm.get('fullname').hasError('required')">Field is requiered</p>
         </div>
-        <div class="form-group">
-            <label for="exampleFormControlSelect1">I am interested in:</label>
-            <div class="form-check">
-              <label class="form-check-label">
-                <input formControlName="interestedIn" type="radio" class="form-check-input" value="Feed the Heroes Challenge" name="interestedIn">Feed the Heroes Challenge
-              </label>
-            </div>
-            <div class="form-check">
-              <label class="form-check-label">
-                <input formControlName="interestedIn" type="radio" class="form-check-input" value="Healthcare System Data" name="interestedIn">Healthcare System Data
-              </label>
-            </div>
-            <div class="form-check">
-              <label class="form-check-label">
-                <input formControlName="interestedIn" type="radio" class="form-check-input" value="CoVent-19 Challenge" name="interestedIn">CoVent-19 Challenge
-              </label>
-            </div>
-            <div *ngIf="contactForm.get('interestedIn').errors && contactForm.get('interestedIn').dirty && contactForm.get('interestedIn').touched" class="error">
-              <p *ngIf="contactForm.get('interestedIn').hasError('required')">Field is requiered</p>
-            </div>
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Email</label>
+        <input formControlName="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        <div *ngIf="contactForm.get('email').errors && contactForm.get('email').dirty && contactForm.get('email').touched" class="error">
+          <p *ngIf="contactForm.get('email').hasError('required')">Field is requiered</p>
+          <p *ngIf="contactForm.get('email').hasError('email')">Invalid format email</p>
         </div>
-        <div class="form-group">
-          <label for="exampleFormControlTextarea1">SubmitI want to help with:</label>
-          <textarea formControlName="readonlyHelpWith" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-          <div *ngIf="contactForm.get('readonlyHelpWith').errors && contactForm.get('readonlyHelpWith').dirty && contactForm.get('readonlyHelpWith').touched" class="error">
-            <p *ngIf="contactForm.get('readonlyHelpWith').hasError('required')">Field is requiered</p>
-          </div>
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Phone</label>
+        <input formControlName="phone" type="text" class="form-control" id="exampleFormControlInput1">
+        <div *ngIf="contactForm.get('phone').errors && contactForm.get('phone').dirty && contactForm.get('phone').touched" class="error">
+          <p *ngIf="contactForm.get('phone').hasError('required')">Field is requiered</p>
         </div>
-    </form>
-  </div>
-  <div class="modal-footer">
-    <button class="btn btn-primary" type="submit" [disabled]="contactForm.invalid">Submit</button>
-  </div>
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Time Zone</label>
+        <input formControlName="timeZone" type="text" class="form-control" id="exampleFormControlInput1">
+        <div *ngIf="contactForm.get('timeZone').errors && contactForm.get('timeZone').dirty && contactForm.get('timeZone').touched" class="error">
+          <p *ngIf="contactForm.get('timeZone').hasError('required')">Field is requiered</p>
+        </div>
+      </div>
+      <p>Thank you for your service, the F/COVID Team</p>
+  </form>
+</div>
+<div class="modal-footer">
+  <button class="btn btn-primary" type="submit" [disabled]="contactForm.invalid">Submit</button>
+</div>
