--- a/src/theme/_icons.scss
+++ b/src/theme/_icons.scss
@@ -2,7 +2,7 @@
   padding-top: 1rem;
   padding-bottom: 4rem;
   .features-icons-item {
-    max-width: 20rem;
+    // max-width: 20rem;
     h5 {
       font-family: 'Montserrat',Helvetica,Arial,serif;
       font-weight: 600;
