--- a/src/theme/_global.scss
+++ b/src/theme/_global.scss
@@ -19,6 +19,10 @@ h6 {
 .lead {
     font-size: 0.9rem;
     font-weight: 500;
+
+    @media (max-width: 767px) {
+        font-size: 1.2rem;
+    }
 }
 
 .logo {
